[package]
name = "simplified"
version = "0.1.1"
authors = ["luca Biendl <b.lucab1211@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A libary to mainly help newer rust-programmers to use basic functions"
repository = "https://github.com/BrunoWallner/simplified"
documentation = "https://github.com/BrunoWallner/simplified"
readme = "README.md"

keywords = ["simple", "simplified", "easy", "beginner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"